--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
                 </div>
 
             </div>
+
         </div>
         <div class="three column row">
             <div class="column">
@@ -16,7 +17,7 @@
                     <img src="images/girl.png"
                         alt="">
                     <a href="/approach"class="ui huge black button">
-                        Approach
+                        <i class="info circle icon"></i>Approach
                     </a>
                 </div>
             </div>
@@ -25,7 +26,7 @@
                     <img src="images/tech.png"
                         alt="">
                     <a href="/technology "class="ui huge black button">
-                        Technology
+                        <i class="tablet alternate icon"></i>Technology
                     </a>
                 </div>
             </div>
@@ -34,7 +35,7 @@
                     <img src="images/testimonials.png"
                         alt="">
                     <a href="/testimonials" class="ui huge black button">
-                        Testimonials
+                        <i class="comments outline icon"></i>Testimonials
                     </a>
                 </div>
             </div>
