--- a/views/testimonials/show.ejs
+++ b/views/testimonials/show.ejs
@@ -35,14 +35,15 @@
                     <div class="extra content">
 
                         <span class="buttons">
-                            <a href="/testimonials" class="ui small blue button">Back</a>
+                            <a href="/testimonials" class="ui small blue button"><i class="arrow alternate circle left outline icon"></i>Back</a>
                              <% if(currentUser && testimonial.author.id.equals(currentUser._id)){ %> 
 
-                            <a href="/testimonials/<%=testimonial._id%>/edit" class="ui small teal button">Edit</a>
+                            <a href="/testimonials/<%=testimonial._id%>/edit" class="ui small teal button"><i class="pencil alternate icon"></i>Edit</a>
 
                             <form id="delete" action="/testimonials/<%= testimonial._id %>?_method=DELETE"
                                 method="post">
-                                <button class="ui small orange button">Delete</button>
+                                <button class="ui small orange button"><i class="trash icon"></i>
+                                    Delete</button>
                             </form>
                              <%}%> 
 
