fix mobile login buttons

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
         <label for="password">password</label>
         <input type="password" name="password" placeholder="password" required>
     </div>
-    <button type="submit"class="ui large blue button">Log In</button>
+    <button type="submit"class="ui login large button">Log In</button>
     Not registered?  <a href="/register">Sign Up</a>
 </form>
 </div>
