--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -77,11 +77,11 @@
                 <% if (!currentUser){%>
                 <div class="ui secondary menu right">
                     <a class="item mobile hidden" href="/login">
-                        <button id="login" class="ui button mobile hidden"><i class="sign-in icon"></i>Login</button>
+                        <button class="login ui button mobile hidden"><i class="sign-in icon"></i>Login</button>
                     </a>
                     <a href="/login" class="item mobile only"><i class="sign-in icon"></i>Login</a>
                     <a class="item mobile hidden" href="/register">
-                        <button id="register" class="ui button mobile hidden"><i class="user plus icon"></i>Sign Up</button>
+                        <button class="ui button mobile hidden register"><i class="user plus icon"></i>Sign Up</button>
                     </a>
                     <a href="/register" class="item mobile only"><i class="user plus icon"></i>Sign Up</a>
                 </div>
@@ -92,14 +92,10 @@
                         <a href="/users" class="item">Users</a>
                         <%}%> 
                 </a>
-                <a class="right item" href="/logout"><button class="ui small red button"><i class="sign out alternate icon"></i>Logout</button> </a>
-                <%}else{%>
-                <a class="right item" href="/profile">
-                    Welcome, <%=currentUser.username%><%if (currentUser.isAdmin){%>(admin)<%}%>!
-                    <a href="/logout"><button class="ui small red button"><i class="sign out alternate icon"></i>Logout</button> </a>
-                </a>
-                <%}%>
-                    <%}%>
+                <a class="right item mobile hidden" href="/logout"><button class="ui small red button"><i class="sign out alternate icon"></i>Logout</button> </a>
+
+                    <%}
+            }%>
 
 
 
@@ -114,7 +110,6 @@
     </div>
 
     <div class="main-content">
-            <% if (!currentUser){%>
         <div  id="schedule-div">
             <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8"
                 target="blank" class="ui large black button livesite-schedule" id="schedule-button"
@@ -122,8 +117,23 @@
                 <i class="clock outline icon"></i>
                 Request Free Lesson
             </a>
+            <% if (!currentUser){%>
+
+            <a href="/login"
+                 class="ui large button register mobile only" id="schedule-button">
+                <i class="sign-in icon"></i>
+                Sign in
+            </a>
+
         </div>
-        <%}%>
+        <%} else {%>
+            <a href="/logout"
+                 class="ui large red button mobile only" id="schedule-button">
+                <i class="sign-out icon"></i>
+                Logout
+            </a>
+            <%}%>
+
         <% if(error&& error.length > 0){%>
         <div class="ui negative message" id="error">
                 <i class="close icon"></i>
