--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -20,12 +20,11 @@ body{
         padding-top: 20px;
     }
     #schedule-button{
-        border: 2px black solid;
-        display: flex;
-        margin: 0 20%;
+        border: 2px black solid;        
         width:100%;
-        justify-content: center;
-        max-width: 250px;;
+        margin: 20px;
+        max-width: 450px;
+        font-size: 1rem;
 
     }
  
@@ -116,13 +115,13 @@ body{
 .right a {
 justify-self: flex-end !important
 }
-#register{
+.register{
     background: #20769A !important;
-    color: white;
+    color: white !important;
 }
-#login{
-    background: #5e5e6f;
-    color: white;
+.login{
+    background: #5e5e6f !important;
+    color: white !important;
 }
 .image a:hover{
     background-color: rgba(0,0,0,0.6)  !important;
@@ -145,7 +144,7 @@ justify-self: flex-end !important
 
 
 #schedule-div{
-    display: flex;
+    display: inline;
 }
 #index-container{
     margin-top:30px;
