--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 
-<h1 class="ui huge header center aligned">sign up</h1>
+<h1 class="ui huge header center aligned">Sign Up</h1>
 <div id="authcontainer" class="container">
    
     <form action="/register" method="post" class="ui form">
@@ -29,7 +29,7 @@
         <div class="field ten wide"><label for="email">Email Address: </label>
             <input type="email" name="email" placeholder="Email address" required>
         </div>
-        <button class="ui large blue button "type="submit">Sign Up</button>    
+        <button class="ui large button register"type="submit">Sign Up</button>    
         Already registered? <a href="/login">Log in</a> 
 
     </form>
