--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,6 +6,11 @@ body{
     background: #F9F9F9;
     height: 100vh;
 }
+@media(max-width: 1200px){
+    body > div.container > div > div > div.ui.secondary.menu.right > a:nth-child(1) > button{
+        display: none;
+    }
+}
 @media (max-width:767px){
 
 
@@ -25,8 +30,8 @@ body{
         margin: 20px 0;
         max-width: 490px;
         font-size: 1rem;
-
     }
+
  
  }  
  #relationship{
