--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -25,7 +25,7 @@ body{
         padding-top: 20px;
     }
     #schedule-button{
-        border: 2px black solid;        
+        border: 2px black hidden !important;
         width:100%;
         margin: 20px 0;
         max-width: 490px;
@@ -48,6 +48,10 @@ body{
 }
  textarea{
      resize: none !important;
+ }
+ .basic-button:hover{
+     background-color: black !important;
+     color: white !important;
  }
 .buttons{
     display: flex;
@@ -171,10 +175,11 @@ justify-self: flex-end !important
 }
 
 #schedule-button:hover{
-    box-sizing: border-box;
+    
     background: rgba(0 ,0,0, 0.2) !important;
     color: black!important;
     border: 2px black solid !important;
+ 
 }
 .footer{
     position: relative;
