--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 
 <div id="authcontainer" class="container">
 
-<form action="/register" method="post" class="ui form">
+<form action="/login" method="post" class="ui form">
     <input type="hidden" name="referer" value= <%= referer %> >
 
     <div class="field ten wide" >
