add placeholder edit profile page

--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,6 +1,21 @@
 <% include ../partials/header %>
 
-<h1 class="ui huge header center aligned">Edit Profile</h1>
+<div class="container">
+    <div class="ui top attached segment">    
+        <h1 class= "ui huge center aligned header">Under Construction</h1>
+        <div >
+                <img class="ui centered large image"src="https://images.unsplash.com/photo-1503708928676-1cb796a0891e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt="">
+        </div>
+        <div class="content">  
+            <br>  
+            <h3>Sorry, this part of the webpage is not quite finished!  You will be able to edit your profile very soon.  We apologize for the inconvenience!</h3>
+            <a href="/profile">Go back</a>
+
+</div>
+</div> 
+</div> 
+
+<!-- <h1 class="ui huge header center aligned">Edit Profile</h1>
 <div id="authcontainer" class="container">
     <a href="">Click here</a> to change your password
     <br>
@@ -30,7 +45,7 @@
 
     </form>
 
-</div> 
+</div>  -->
 
 
 
