pix typo on register page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
         <div class="field ten wide"><label for="email">email</label>
             <input type="email" name="email" placeholder="Email address" required>
         </div>
-        <div class="field ten wide"><label for="avatar">Upload image</label>
+        <div class="field ten wide"><label for="avatar">Upload profile image (optional)</label>
             <input type="file" id="avatar" accept="image/*" name="avatar">
         </div>
         <div class="field ten wide">
