--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -34,10 +34,18 @@
 
             $('#changeAvatar').click((e)=>{
                 e.preventDefault();
-                $('.ui.modal')
+                $('.ui.modal.avatar')
                 .modal('show')
 ;
             })
+
+            $('#changeEmail').click((e)=>{
+                e.preventDefault();
+                $('.ui.modal.email')
+                .modal('show')
+;
+            })
+
 
             
         
