--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,50 +1,63 @@
 <% include ../partials/header %>
 <div class="ui top attached segment">
-        <h1><%=currentUser.firstname%> <%=currentUser.lastname%>'s Profile </h1>
-        <!-- <a class="ui large basic black button "href="/profile/<%=currentUser.id %>/edit">Edit Profile</a> -->
-<hr>
+    <h1><%=currentUser.firstname%> <%=currentUser.lastname%>'s Profile </h1>
+    <!-- <a class="ui large basic black button "href="/profile/<%=currentUser.id %>/edit">Edit Profile</a> -->
+    <hr>
     <div class="ui stackable two column  grid">
         <div class="column">
-                <div class="ui image">
-                    <img src="<%= currentUser.avatar%>" alt="">
-                </div>
-                <br><br>
-                <a id="changeAvatar" href="" class="ui basic button">Change Avatar</a>
-                <br>             
-                <br>
-                <div class="ui modal">
-                        <div class="header">Change Profile Picture</div>
-                        <div class="content">
-                            <form action="/profile/<%=currentUser._id%>?_method=PUT" method="POST" enctype="multipart/form-data" class="ui form">
-                                <div class="field ten wide"><label for="avatar">Upload profile image (optional)</label>
-                                    <input type="file" id="avatar" accept="image/*" name="avatar">
-                                </div>
-                                <button class="ui primary button" type="submit">Change Picture</button>
-                            </form>
-
+            <div class="ui image">
+                <img src="<%= currentUser.avatar%>" alt="">
+            </div>
+            <br><br>
+            <a id="changeAvatar" href="" class="ui basic button">Change Avatar</a>
+            <br>
+            <br>
+            <div class="ui modal avatar">
+                <div class="header">Change Profile Picture</div>
+                <div class="content">
+                    <form action="/profile/<%=currentUser._id%>?_method=PUT" method="POST" enctype="multipart/form-data"
+                        class="ui form">
+                        <div class="field ten wide"><label for="avatar">Upload profile image (optional)</label>
+                            <input type="file" id="avatar" accept="image/*" name="avatar">
                         </div>
-                      </div>             
-                <strong> <%=currentUser.username%></strong>
-                 <br><br>
-                <hr>
-                <br>
-                <strong>Email: <%=currentUser.email %></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="" class="ui basic button">Edit</a>
-                
-                <div class="ui divider"></div>
-                </a>
-               <P>Member since: <%=currentUser._id.getTimestamp().toString().substring(0,15)%></P>
+                        <button class="ui primary button" type="submit">Change Picture</button>
+                    </form>
+
+                </div>
+            </div>
+            <strong> <%=currentUser.username%></strong>
+            <br><br>
+            <hr>
+            <br>
+            <strong>Email: <%=currentUser.email %></strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a id="changeEmail" href="" class="ui basic button">Update</a>
+            <div class="ui modal email">
+                <div class="header">Update Email Address</div>
+                <div class="content">
+                    <form action="/profile/<%=currentUser._id%>?_method=PUT" method="POST" enctype="multipart/form-data"
+                        class="ui form">
+                        <div class="field ten wide"><label for="email">email</label>
+                            <input type="email" name="email" placeholder="Email address" required>
+                        </div>
+                        <button class="ui primary button" type="submit">Update Email</button>
+                    </form>
+                </div>
+            </div>
+            <div class="ui divider"></div>
+            </a>
+            <P>Member since: <%=currentUser._id.getTimestamp().toString().substring(0,15)%></P>
 
 
-    </div>
-        <div class="column">  
-            <div id="profileActivity"class="ui divided items">
-              <h1>Activity Feed</h1>
-              Coming Soon!  Here you will be able to track your practice, update your profile, and much more!
-            
         </div>
-</div>
+        <div class="column">
+            <div id="profileActivity" class="ui divided items">
+                <h1>Activity Feed</h1>
+                Coming Soon! Here you will be able to track your practice, update your profile, and much more!
+
+            </div>
+        </div>
+    </div>
 </div>
 
 <% include ../partials/footer %>
-
-
