--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,48 +6,16 @@
     <link rel="stylesheet" href="/stylesheets/hamburger.css" type="text/css" media="all">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
-        </script>
-
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src ="/scripts/vcitaconfig.js"></script>
     <script src="/stylesheets/hamburger.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
-    <script type='text/javascript' charset='utf-8'>
-        window.liveSiteAsyncInit = function () {
-            LiveSite.init({
-                id: 'WI-CPQWTG30TSRS3Z8X9SWX',
-                ui: false
-            });
-        };
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0],
-                p = 'https://',
-                r = Math.floor(new Date().getTime() / 1000000);
-            if (d.getElementById(id)) { return; }
-            js = d.createElement(s); js.id = id;
-            js.src = p + "widgets.vcdnita.com/assets/livesite.js?" + r;
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'livesite-jssdk'));
-    </script>
-
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Finlay Piano Studio: </title>
-<script>
-    function jsUcfirst(string) {
-        return string.charAt(0).toUpperCase() + string.slice(1);
-    }
-    var page = location.pathname.substring(1);
-    var title = document.querySelector("title")
-    if (page) {
-        title.innerHTML += jsUcfirst(page);
-    } else {
-        title.innerHTML += " Homepage"
-    }
-</script>
-
+<script src="scripts/header.js"></script>
 <link rel="icon" href="images/piano.png" type="image/x-icon">
 
 <body class="site">
@@ -76,19 +44,21 @@
                 </a>
                 <div class="ui secondary menu right">
 
-                <% if (!currentUser){%>
-                    <a class="item mobile hidden" href="/login">
-                        <button class="login ui button mobile hidden"><i class="sign-in icon"></i>Sign in</button>
-                    </a>
-                    <a href="/login" class="item mobile only"><i class="sign-in icon"></i>Sign in</a>
-                    <a class="item mobile hidden" href="/register">
-                        <button class="ui button mobile hidden register"><i class="user plus icon"></i>Register</button>
-                    </a>
-                    <a href="/register" class="item mobile only"><i class="user plus icon"></i>Register</a>
-                <%}else{%>
-                <%if(currentUser){%>
+                    <% if (!currentUser){%>
+                <div class="ui buttons">
+                        <a class="item mobile hidden" href="/login">
+                            <a href="login" class="login ui button mobile hidden item"><i class="sign-in icon"></i>Sign in</a>
+                        </a>
+                        <a href="/login" class="item mobile only"><i class="sign-in icon"></i>Sign in</a>
+                      
+                            <a href="/register" class="ui button mobile hidden register item"><i class="user plus icon"></i>Register</a>
+               
+                </div>
 
-                    <div class="ui dropdown item">
+                    <%}else{%>
+                   
+
+                    <div class="ui dropdown item mobile hidden">
 
                         <a href="" id="dropdown">
                             <img src="<%=currentUser.avatar%>" alt=""
@@ -99,73 +69,74 @@
 
                         <div class="menu">
                             <div class="item">
-                                    <%if (currentUser.isAdmin){%> <a href="/users" class="item"><i class="users icon"></i>Users</a><%}%> 
+                                    <%if (currentUser.isAdmin){%> <a href="/users" class="item"><i
+                                    class="users icon"></i>Users</a><%}%> 
                             </div>
                             <div class="item">
                                     <a class="item" href="/profile"><i class="user outline icon"></i>View Profile</a>
                                 </div>
                             <div class="item">
                                 <a  class="item" href="/logout"><i class="sign-out icon"></i>Logout</a>
-                            </div>
-                          
+                            </div>    
+                </div>
+            </div>  
+       
 
+                <% } %>                   
+
+             
+                    </div>
+
+                   
+                   
+
+                    <div class="hamburger">
+                        <span class="hamburger-bun"></span>
+                        <span class="hamburger-patty"></span>
+                        <span class="hamburger-bun"></span>
+                    </div>
 
                 </div>
-
-
-                    <%}
-            }%>
+            </div>
         </div>
 
+        <div class="main-content">
+            <div class="ui one column grid">
+                <div class="column">
+                    <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8"
+                        target="blank" class="ui large black button livesite-schedule" id="schedule-button"
+                        data-staff="ngxwhe1u43agj3x8">
+                        <i class="clock outline icon"></i>
+                        Request Free Lesson
+                    </a>
+                    <% if (!currentUser){%>
 
+                    <a href="/login" class="ui large button register mobile only" id="schedule-button">
+                        <i class="sign-in icon"></i>
+                        Sign in
+                    </a>
 
-                            <div class="hamburger">
-                                <span class="hamburger-bun"></span>
-                                <span class="hamburger-patty"></span>
-                                <span class="hamburger-bun"></span>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="main-content">
-                    <div class="ui one column grid">
-                        <div class="column">
-                            <a href="https://live.vcita.com/site/en27y7hjp0zhboyr/online-scheduling?staff=ngxwhe1u43agj3x8"
-                                target="blank" class="ui large black button livesite-schedule" id="schedule-button"
-                                data-staff="ngxwhe1u43agj3x8">
-                                <i class="clock outline icon"></i>
-                                Request Free Lesson
-                            </a>
-                            <% if (!currentUser){%>
-
-                            <a href="/login" class="ui large button register mobile only" id="schedule-button">
-                                <i class="sign-in icon"></i>
-                                Sign in
-                            </a>
-
-                            <%} else {%>
-                            <a href="/logout" class="ui large red button mobile only" id="schedule-button">
-                                <i class="sign-out icon"></i>
-                                Logout
-                            </a>
-                            <%}%>
+                    <%} else {%>
+                    <a href="/logout" class="ui large red button mobile only" id="schedule-button">
+                        <i class="sign-out icon"></i>
+                        Logout
+                    </a>
+                    <%}%>
                 </div>
 
         </div>
 
 
         <% if(error&& error.length > 0){%>
-                            <div class="ui negative message" id="error">
-                                <i class="close icon"></i>
-                                <%= error %></div>
+                    <div class="ui negative message" id="error">
+                        <i class="close icon"></i>
+                        <%= error %></div>
 
-                            <%}%>
+                    <%}%>
 
         <% if(success&& success.length > 0){%>
-                            <div class="ui positive message" id="success">
-                                <i class="close icon"></i>
-                                <%= success %></div>
-                            <%}%>
+                    <div class="ui positive message" id="success">
+                        <i class="close icon"></i>
+                        <%= success %></div>
+                    <%}%>
    
