fix mobile view signin button

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -109,7 +109,9 @@
                         <i class="clock outline icon"></i>
                         Request Free Lesson
                     </a>
+                
                     <% if (!currentUser){%>
+                    </div>
                     <div class="ui buttons" id="mobile-signin">
                             <a href="/login" class="ui large button login mobile only" >
                                 <i class="sign-in icon"></i>
@@ -148,8 +150,9 @@
                                     </div>    
                             </div>
                     </div>  
-                    <%}%>
                 </div>
+                    <%}%>
+                
 
         </div>
 
