--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -139,7 +139,7 @@
                         
                              
         
-                                <div class="ui vertical menu">
+                                <div class="ui vertical inverted menu" id="mobile-menu">
                                     <div class="item">
                                             <%if (currentUser.isAdmin){%> <a href="/users" class="item"><i
                                             class="users icon"></i>Users</a><%}%> 
